db, migrations, jwt helper & readme updates

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 API_PORT=8443
 WEB_API_CERT_FILE=./certs/server/server.crt
 WEB_API_KEY_FILE=./certs/server/server.key
+
+JWT_PRIVATE_KEY_FILE=./certs/jwt_keys/private.pem
+JWT_PUBLIC_KEY_FILE=./certs/jwt_keys/public.pem
+
+DB_CONNECTION_URL=postgres://ffuser:ffpass@featureflagsdb:5432/featureflagsdb
+DB_MAX_CONN_LIFETIME=30m
+DB_MAX_CONN_IDLE_TIME=5m
+DB_HEALTH_CHECK_PERIOD=1m
+DB_MIN_CONNS=1
+DB_MAX_CONNS=5
