--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,38 +15,4 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         
-      # - name: Setup Go
-      #   uses: actions/setup-go@v4
-      #   with:
-      #     go-version: "1.24"
-
-      # - name: Install Dependencies
-      #   run: |
-      #     go mod tidy
-      #     go mod vendor
-      #     go install github.com/onsi/ginkgo/v2/ginkgo@latest
-      
-      # - name: Set up Docker Compose
-      #   uses: docker/setup-buildx-action@v2
-
-      # - name: Install Docker Compose
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install -y docker-compose
-
-      # - name: Start Dependencies with Docker Compose
-      #   run: |
-      #     docker-compose down --remove-orphans
-      #     docker-compose up -d featureflagsdb migratedb
-
-      # - name: Harcoded wait for now
-      #   run: |
-      #     sleep 15
-      
-      # - name: Run Tests
-      #   run: |
-      #     ginkgo run -tags ./...
-      
-      # - name: Build Application
-      #   run: |
-      #     docker build -t featureflagsapi:latest .
+      #TODO: Add more steps
