--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,34 @@ on:
 
 jobs:
   build:
-    name: Build and Test
+    name: Basic CI Steps
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
-        
-      #TODO: Add more steps
+        uses: actions/checkout@v4
+
+      - name: Set up GO
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.24'
+      
+      - name: Run linter
+        uses: golangci/golangci-lint-action@v6
+        with:
+          args: --timeout=2m
+      
+      - name: Download dependencies
+        run: go mod vendor
+
+      - name: Install Ginkgo
+        run: |
+          go install github.com/onsi/ginkgo/v2/ginkgo@latest
+      
+      - name: Run docker containers and tests
+        run: |
+          docker-compose up -d
+          sleep 10 # probably there is a better way
+          ginkgo run ./...
+          docker-compose down
+
