--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       migratedb:
         condition: service_completed_successfully 
     ports:
-      - "8443:8443" 
+      - "8080:8080" 
     env_file:
       - .env
   migratedb:
@@ -38,7 +38,32 @@ services:
       retries: 30
   otel-collector:
     image: "otel/opentelemetry-collector:latest"
+    volumes:
+      - ./otel-config.yaml:/etc/otel/config.yaml
     ports:
       - "4317:4317"
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yaml
+    ports:
+      - "9090:9090"
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    depends_on:
+      - prometheus
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+  jaeger:
+    image: jaegertracing/all-in-one:1.41
+    container_name: jaeger
+    ports:
+      - "16686:16686" # Jaeger UI
+      - "14250:14250" # GRPC Span Collector
 volumes:
   pgdata:
+  grafana-data:
