--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,15 +33,8 @@ jobs:
       - name: Generate certificates and keys
         run: make jwt-keys
       
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: go-mod-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            go-mod-
+      - name: Get dependencies
+        run: make vendor
 
       - name: Run the app
         run: |
