--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,9 @@ services:
       migratedb:
         condition: service_completed_successfully 
     ports:
-      - "8080:8080" 
+      - "8080:8080"
+    environment:
+      - OTEL_COLLECTOR_HOST=otel-collector:4317
     env_file:
       - .env
   migratedb:
@@ -38,17 +40,20 @@ services:
       retries: 30
   otel-collector:
     image: "otel/opentelemetry-collector:latest"
+    container_name: otel-collector
     volumes:
-      - ./otel-config.yaml:/etc/otel/config.yaml
+      - ./otel-config.yml:/etc/otel/config.yml
     ports:
-      - "4317:4317"
+      - "4317:4317" # GRPC for metrics/traces
+      - "9091:9091" # Prometheus scraping endpoint
+    command: ["--config=/etc/otel/config.yml"]
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
-      - ./prometheus.yaml:/etc/prometheus/prometheus.yaml
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
-      - "9090:9090"
+      - "9090:9090" 
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
@@ -59,11 +64,10 @@ services:
     volumes:
       - grafana-data:/var/lib/grafana
   jaeger:
-    image: jaegertracing/all-in-one:1.41
+    image: jaegertracing/all-in-one:latest
     container_name: jaeger
     ports:
-      - "16686:16686" # Jaeger UI
-      - "14250:14250" # GRPC Span Collector
+      - "16686:16686"
 volumes:
   pgdata:
   grafana-data:
